--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <header>
     <div class="navbar">
-      <img src="./images/logo.svg" alt="logo" />
+      <img src="./images/logo.svg" alt="logo" class="header-logo"/>
       <nav>
         <li><a href="#">About</a></li>
         <li><a href="#">Services</a></li>
@@ -100,7 +100,7 @@
         </div>
         <div>
           <img src="./images/image-thomas.jpg" alt="Thomas S" />
-          <p >
+          <p>
             Sunnyside's enthusiasm coupled with their keen interest in our
             brand's success made it a satisfying and enjoyable experience.
           </p>
@@ -146,13 +146,15 @@
     </section>
   </body>
   <footer>
-    <img src="./images/logo.svg" alt="logo" class="footer-logo"/>
-    <div class="footer-links"><a href="#">About</a><a href="#">Services</a><a href="#">Projects</a></div>
-    <div>
-      <img src="./images/icon-facebook.svg" alt="facebook-icon" />
-      <img src="./images/icon-instagram.svg" alt="instagram-icon" />
-      <img src="./images/icon-twitter.svg" alt="twitter-icon" />
-      <img src="./images/icon-pinterest.svg" alt="pinterest-icon" />
+    <img src="./images/footer_logo.svg" alt="logo" class="footer-logo" />
+    <div class="footer-links">
+      <a href="#">About</a><a href="#">Services</a><a href="#">Projects</a>
+    </div>
+    <div class="social-media">
+      <a href="#"><img src="./images/icon-facebook.svg" alt="facebook-icon" /></a>
+      <a href="#"><img src="./images/icon-instagram.svg" alt="instagram-icon" /></a>
+      <a href="#"><img src="./images/icon-twitter.svg" alt="twitter-icon" /></a>
+      <a href="#"><img src="./images/icon-pinterest.svg" alt="pinterest-icon" /></a>
     </div>
   </footer>
 </html>
