--- a/index.html
+++ b/index.html
@@ -8,13 +8,18 @@
   </head>
   <header>
     <div class="navbar">
-      <img src="./images/logo.svg" alt="logo" class="header-logo"/>
+      <img src="./images/logo.svg" alt="logo" class="header-logo" />
       <nav>
         <li><a href="#">About</a></li>
         <li><a href="#">Services</a></li>
         <li><a href="#">Projects</a></li>
         <li><a href="#" class="contact">CONTACT</a></li>
       </nav>
+      <img
+        src="./images/icon-hamburger.svg"
+        alt="hamburger"
+        class="hamburger"
+      />
     </div>
     <div>
       <h1 class="title title--fs-xxl">WE ARE CREATIVES</h1>
@@ -151,10 +156,16 @@
       <a href="#">About</a><a href="#">Services</a><a href="#">Projects</a>
     </div>
     <div class="social-media">
-      <a href="#"><img src="./images/icon-facebook.svg" alt="facebook-icon" /></a>
-      <a href="#"><img src="./images/icon-instagram.svg" alt="instagram-icon" /></a>
+      <a href="#"
+        ><img src="./images/icon-facebook.svg" alt="facebook-icon"
+      /></a>
+      <a href="#"
+        ><img src="./images/icon-instagram.svg" alt="instagram-icon"
+      /></a>
       <a href="#"><img src="./images/icon-twitter.svg" alt="twitter-icon" /></a>
-      <a href="#"><img src="./images/icon-pinterest.svg" alt="pinterest-icon" /></a>
+      <a href="#"
+        ><img src="./images/icon-pinterest.svg" alt="pinterest-icon"
+      /></a>
     </div>
   </footer>
 </html>
