--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./dist/style.css" />
     <title>Frontend Mentor | Sunnyside agency landing page</title>
+    <script src="./script.js" defer></script>
   </head>
   <header>
     <div class="navbar">
       <img src="./images/logo.svg" alt="logo" class="header-logo" />
-      <nav>
+      <nav id="mob-nav">
         <li><a href="#">About</a></li>
         <li><a href="#">Services</a></li>
         <li><a href="#">Projects</a></li>
-        <li><a href="#" class="contact">CONTACT</a></li>
+        <li class="contact-button"><a href="#">CONTACT</a></li>
       </nav>
       <img
         src="./images/icon-hamburger.svg"
