--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     <div>
       <h1 class="title title--fs-xxl">WE ARE CREATIVES</h1>
-      <img src="./images/icon-arrow-down.svg" alt="arrow-down" />
+      <img src="./images/icon-arrow-down.svg" alt="arrow-down" class="arrow-down" />
     </div>
   </header>
   <body>
